<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/admin_title_history" />
    <item
        android:id="@+id/nav_validate"
        android:icon="@drawable/ic_validate"
        android:title="@string/admin_title_validate" />
    <item
        android:id="@+id/nav_printing"
        android:icon="@drawable/ic_print"
        android:title="@string/admin_title_printing" />
    <item
        android:id="@+id/nav_departments"
        android:icon="@drawable/ic_departments"
        android:title="@string/admin_title_departments" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/admin_title_display" />
</menu>